# template.qt6

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: Utils.cmake
src/: CMakeLists.txt
src/awesome/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp  version.hpp.in
src/awesome/app/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
